--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
   href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css">
     
     <!-- Github Activity Stream -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-<link rel="stylesheet" href="github-activity.min.css">
+   
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
+<link rel="stylesheet" href="assets/css/github-activity-0.1.4.min.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -589,8 +590,10 @@
   <script>
     GitHubCalendar(".calendar", "nadishsingh");
   </script>
+
+
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-<script type="text/javascript" src="github-activity.min.js"></script>
+<script type="text/javascript" src="assets/js/github-activity-0.1.4.min.js">
     <script>
     GitHubActivity.feed({ username: "nadishsingh", selector: "#feed" });
     </script>
