--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-<script type="text/javascript" src="assets/js/github-activity-0.1.4.min.js">
+    <script type="text/javascript" src="assets/js/github-activity-0.1.4.min.js"></script>
     <script>
     GitHubActivity.feed({ username: "nadishsingh", selector: "#feed" });
     </script>
