--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Github Activity Stream -->
    
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
-<link rel="stylesheet" href="assets/css/github-activity-0.1.4.min.css">
+<link rel="stylesheet" href="assets/css/github-activity.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -594,7 +594,7 @@
 
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-    <script type="text/javascript" src="assets/js/github-activity-0.1.4.min.js"></script>
+    <script type="text/javascript" src="assets/js/github-activity.js"></script>
     <script>
     GitHubActivity.feed({ username: "nadishsingh", selector: "#feed" });
     </script>
