--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
       <div class="social-icons">
         <ul class="list-inline">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="http://www.facebook.com/nadish.singh"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="http://github.com/nadishsingh"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://www.instagram.com/nadishsingh"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://plus.google.com/u/0/111536412575523321269"><i class="fa fa-google-plus"></i></a></li>
+          <li><a href="https://in.linkedin.com/in/nadish-singh-71b978114"><i class="fa fa-linkedin"></i></a></li>
         </ul>
       </div> <!-- /.social-icons -->
 		</div>
@@ -374,7 +374,8 @@
                   <div class="tt-overlay"></div>
                   <div class="links">
                     <a class="image-link" href="assets/images/works/googlehomepage.png"><i class="fa fa-search-plus"></i></a>
-                    <a href="https://github.com/nadishsingh/Google-HomePage.git"><i class="fa fa-link"></i></a>                          
+                    <a href="https://github.com/nadishsingh/Google-HomePage.git"><i class="fa fa-link"></i></a>
+                      <a href="http://nadishsingh.github.io/Google-HomePage"><i class="fa fa-folder-open"></i></a>
                   </div><!-- /.links -->
                   <img src="assets/images/works/googlehomepage.png" alt="Google Home-Page" width="800px" height="200px" > 
                   <div class="portfolio-info">
@@ -391,7 +392,8 @@
                   <div class="tt-overlay"></div>
                   <div class="links">
                     <a class="image-link" href="assets/images/works/Tip-Calculator.png"><i class="fa fa-search-plus"></i></a>
-                    <a href="https://github.com/nadishsingh/Tip-Calculator.git"><i class="fa fa-link"></i></a>                          
+                    <a href="https://github.com/nadishsingh/Tip-Calculator.git"><i class="fa fa-link"></i></a>
+                      <a href="http://nadishsingh.github.io/Tip-Calculator"><i class="fa fa-folder-open"></i></a>
                   </div><!-- /.links -->
                   <img src="assets/images/works/Tip-Calculator.png" alt="Tip-Calculator" height="200px"> 
                   <div class="portfolio-info">
@@ -407,7 +409,8 @@
                   <div class="tt-overlay"></div>
                   <div class="links">
                     <a class="image-link" href="assets/images/works/reactiontester.png"><i class="fa fa-search-plus"></i></a>
-                    <a href="https://github.com/nadishsingh/Reaction-Tester.git"><i class="fa fa-link"></i></a>                          
+                    <a href="https://github.com/nadishsingh/Reaction-Tester.git"><i class="fa fa-link"></i></a>
+                      <a href="http://nadishsingh.github.io/Reaction-Tester"><i class="fa fa-folder-open"></i></a>
                   </div><!-- /.links -->
                   <img src="assets/images/works/reactiontester.png" alt="Reaction-Tester" height="200px"> 
                   <div class="portfolio-info">
@@ -560,6 +563,7 @@
 	</div>
 
 	<!-- Javascript files -->
+    
   <script src="assets/js/jquery.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/js/jquery.stellar.min.js"></script>
