--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
             <div class="download-button">
               <a class="btn btn-info btn-lg" href="#contact"><i class="fa fa-paper-plane"></i>Send me a message</a>
-              <a class="btn btn-primary btn-lg" href="#"><i class="fa fa-download"></i>Download my CV</a>
+              <a class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=0B3QClZPG0nzmb3N5UkZPSXh5QlVpOWFXQ3d5REVZQ3FWc1hj"><i class="fa fa-download"></i>Download my CV</a>
             </div>
           </div>
 
@@ -584,4 +584,4 @@
     GitHubCalendar(".calendar", "nadishsingh");
   </script>
     </body>
-</html>   
+</html>
